make status, late pass, until date editable on program view page add discharge to community drop down on program view page centralize bed reservation cancelation (fix discharge bug)