@@ -13,21 +13,21 @@ import org.oscarehr.PMmodule.exception.AlreadyAdmittedException;
 import org.oscarehr.PMmodule.exception.ProgramFullException;
 import org.oscarehr.PMmodule.model.Admission;
 import org.oscarehr.PMmodule.model.AdmissionSearchBean;
+import org.oscarehr.PMmodule.model.BedDemographic;
 import org.oscarehr.PMmodule.model.ClientReferral;
 import org.oscarehr.PMmodule.model.Program;
 import org.oscarehr.PMmodule.model.ProgramQueue;
 import org.oscarehr.PMmodule.service.AdmissionManager;
+import org.oscarehr.PMmodule.service.BedDemographicManager;
 
 public class AdmissionManagerImpl implements AdmissionManager {
 
 	private AdmissionDao dao;
-	
 	private ProgramDao programDao;
-
 	private ProgramQueueDao programQueueDao;
-
 	private ClientReferralDAO clientReferralDAO;
-
+	private BedDemographicManager bedDemographicManager;
+	
 	public void setAdmissionDao(AdmissionDao dao) {
 		this.dao = dao;
 	}
@@ -43,37 +43,41 @@ public class AdmissionManagerImpl implements AdmissionManager {
 	public void setClientReferralDAO(ClientReferralDAO dao) {
 		this.clientReferralDAO = dao;
 	}
-
-	public Admission getAdmission(String programId, String demographicNo) {
-		return dao.getAdmission(Long.valueOf(programId), Integer.valueOf(demographicNo));
+	
+	public void setBedDemographicManager(BedDemographicManager bedDemographicManager) {
+	    this.bedDemographicManager = bedDemographicManager;
+    }
+	
+	public Admission getAdmission(String programId, Integer demographicNo) {
+		return dao.getAdmission(Long.valueOf(programId), demographicNo);
 	}
 
-	public Admission getCurrentAdmission(String programId, String demographicNo) {
-		return dao.getCurrentAdmission(Long.valueOf(programId), Integer.valueOf(demographicNo));
+	public Admission getCurrentAdmission(String programId, Integer demographicNo) {
+		return dao.getCurrentAdmission(Long.valueOf(programId), demographicNo);
 	}
 
 	public List getAdmissions() {
 		return dao.getAdmissions();
 	}
 
-	public List getAdmissions(String demographicNo) {
-		return dao.getAdmissions(Integer.valueOf(demographicNo));
+	public List getAdmissions(Integer demographicNo) {
+		return dao.getAdmissions(demographicNo);
 	}
 
-	public List getCurrentAdmissions(String demographicNo) {
-		return dao.getCurrentAdmissions(Integer.valueOf(demographicNo));
+	public List getCurrentAdmissions(Integer demographicNo) {
+		return dao.getCurrentAdmissions(demographicNo);
 	}
 
-	public Admission getCurrentBedProgramAdmission(String demographicNo) {
-		return dao.getCurrentBedProgramAdmission(programDao, Integer.valueOf(demographicNo));
+	public Admission getCurrentBedProgramAdmission(Integer demographicNo) {
+		return dao.getCurrentBedProgramAdmission(programDao, demographicNo);
 	}
 
-	public List getCurrentServiceProgramAdmission(String demographicNo) {
-		return dao.getCurrentServiceProgramAdmission(programDao, Integer.valueOf(demographicNo));
+	public List getCurrentServiceProgramAdmission(Integer demographicNo) {
+		return dao.getCurrentServiceProgramAdmission(programDao, demographicNo);
 	}
 
-	public Admission getCurrentCommunityProgramAdmission(String demographicNo) {
-		return dao.getCurrentCommunityProgramAdmission(programDao, Integer.valueOf(demographicNo));
+	public Admission getCurrentCommunityProgramAdmission(Integer demographicNo) {
+		return dao.getCurrentCommunityProgramAdmission(programDao, demographicNo);
 	}
 
 	public List getCurrentAdmissionsByProgramId(String programId) {
@@ -88,35 +92,35 @@ public class AdmissionManagerImpl implements AdmissionManager {
 		dao.saveAdmission(admission);
 	}
 
-	public void processAdmission(String demographicNo, String providerNo, Program program, String dischargeNotes, String admissionNotes) throws ProgramFullException, AdmissionException {
+	public void processAdmission(Integer demographicNo, String providerNo, Program program, String dischargeNotes, String admissionNotes) throws ProgramFullException, AdmissionException {
 		processAdmission(demographicNo, providerNo, program, dischargeNotes, admissionNotes, false, null);
 	}
 
-	public void processAdmission(String demographicNo, String providerNo, Program program, String dischargeNotes, String admissionNotes, boolean tempAdmission) throws ProgramFullException, AdmissionException {
+	public void processAdmission(Integer demographicNo, String providerNo, Program program, String dischargeNotes, String admissionNotes, boolean tempAdmission) throws ProgramFullException, AdmissionException {
 		processAdmission(demographicNo, providerNo, program, dischargeNotes, admissionNotes, tempAdmission, null);
 	}
 
-	public void processAdmission(String demographicNo, String providerNo, Program program, String dischargeNotes, String admissionNotes, Date admissionDate) throws ProgramFullException, AdmissionException {
+	public void processAdmission(Integer demographicNo, String providerNo, Program program, String dischargeNotes, String admissionNotes, Date admissionDate) throws ProgramFullException, AdmissionException {
 		processAdmission(demographicNo, providerNo, program, dischargeNotes, admissionNotes, false, admissionDate);
 	}
 
-	public void processAdmission(String demographicNo, String providerNo, Program program, String dischargeNotes, String admissionNotes, boolean tempAdmission, Date admissionDate) throws ProgramFullException, AdmissionException {
+	public void processAdmission(Integer demographicNo, String providerNo, Program program, String dischargeNotes, String admissionNotes, boolean tempAdmission, Date admissionDate) throws ProgramFullException, AdmissionException {
 		// see if there's room first
 		if (program.getNumOfMembers().intValue() >= program.getMaxAllowed().intValue()) {
 			throw new ProgramFullException();
 		}
 
-		// If admitting to bed program, Discharge from old bed program
+		// If admitting to bed program, discharge from old bed program
 		if (program.getType().equalsIgnoreCase("bed") && !tempAdmission) {
 			Admission fullAdmission = getCurrentBedProgramAdmission(demographicNo);
 
 			// community?
 			if (fullAdmission != null) {
-				this.processDischarge(new Integer(fullAdmission.getProgramId().intValue()), new Integer(demographicNo), dischargeNotes);
+				processDischarge(new Integer(fullAdmission.getProgramId().intValue()), new Integer(demographicNo), dischargeNotes);
 			} else {
-				fullAdmission = this.getCurrentCommunityProgramAdmission(demographicNo);
+				fullAdmission = getCurrentCommunityProgramAdmission(demographicNo);
 				if (fullAdmission != null) {
-					this.processDischarge(new Integer(fullAdmission.getProgramId().intValue()), new Integer(demographicNo), dischargeNotes);
+					processDischarge(new Integer(fullAdmission.getProgramId().intValue()), new Integer(demographicNo), dischargeNotes);
 				}
 			}
 		}
@@ -136,7 +140,7 @@ public class AdmissionManagerImpl implements AdmissionManager {
 		
 		newAdmission.setAdmissionNotes(admissionNotes);
 		newAdmission.setAdmissionStatus("current");
-		newAdmission.setClientId(Integer.valueOf(demographicNo));
+		newAdmission.setClientId(demographicNo);
 		newAdmission.setProgramId(new Long(program.getId().intValue()));
 		newAdmission.setProviderNo(Long.valueOf(providerNo));
 		newAdmission.setTeamId(new Long(0));
@@ -146,7 +150,7 @@ public class AdmissionManagerImpl implements AdmissionManager {
 		saveAdmission(newAdmission);
 
 		// Clear them from the queue, Update their referral
-		ProgramQueue pq = programQueueDao.getActiveProgramQueue(new Long(program.getId().longValue()), Integer.valueOf(demographicNo));
+		ProgramQueue pq = programQueueDao.getActiveProgramQueue(new Long(program.getId().longValue()), demographicNo);
 		if (pq != null) {
 			pq.setStatus("admitted");
 			programQueueDao.saveProgramQueue(pq);
@@ -162,13 +166,13 @@ public class AdmissionManagerImpl implements AdmissionManager {
 		}
 	}
 
-	public void processInitialAdmission(String demographicNo, String providerNo, Program program, String admissionNotes, Date admissionDate) throws ProgramFullException, AlreadyAdmittedException {
+	public void processInitialAdmission(Integer demographicNo, String providerNo, Program program, String admissionNotes, Date admissionDate) throws ProgramFullException, AlreadyAdmittedException {
 		// see if there's room first
 		if (program.getNumOfMembers().intValue() >= program.getMaxAllowed().intValue()) {
 			throw new ProgramFullException();
 		}
 
-		Admission admission = this.getCurrentAdmission(String.valueOf(program.getId()), demographicNo);
+		Admission admission = getCurrentAdmission(String.valueOf(program.getId()), demographicNo);
 		if (admission != null) {
 			throw new AlreadyAdmittedException();
 		}
@@ -181,7 +185,7 @@ public class AdmissionManagerImpl implements AdmissionManager {
 		}
 		newAdmission.setAdmissionNotes(admissionNotes);
 		newAdmission.setAdmissionStatus("current");
-		newAdmission.setClientId(Integer.valueOf(demographicNo));
+		newAdmission.setClientId(demographicNo);
 		newAdmission.setProgramId(new Long(program.getId().intValue()));
 		newAdmission.setProviderNo(Long.valueOf(providerNo));
 		newAdmission.setTeamId(new Long(0));
@@ -189,12 +193,12 @@ public class AdmissionManagerImpl implements AdmissionManager {
 		saveAdmission(newAdmission);
 	}
 
-	public Admission getTemporaryAdmission(String demographicNo) {
-		return dao.getTemporaryAdmission(Long.valueOf(demographicNo));
+	public Admission getTemporaryAdmission(Integer demographicNo) {
+		return dao.getTemporaryAdmission(demographicNo);
 	}
 
-	public List getCurrentTemporaryProgramAdmission(String demographicNo) {
-		Admission admission = dao.getTemporaryAdmission(Long.valueOf(demographicNo));
+	public List getCurrentTemporaryProgramAdmission(Integer demographicNo) {
+		Admission admission = dao.getTemporaryAdmission(demographicNo);
 		if (admission != null) {
 			List results = new ArrayList();
 			results.add(admission);
@@ -207,8 +211,8 @@ public class AdmissionManagerImpl implements AdmissionManager {
 		return dao.search(searchBean);
 	}
 
-	public void processDischarge(Integer programId, Integer clientId, String dischargeNotes) throws AdmissionException {
-		Admission fullAdmission = getCurrentAdmission(String.valueOf(programId), String.valueOf(clientId));
+	public void processDischarge(Integer programId, Integer demographicNo, String dischargeNotes) throws AdmissionException {
+		Admission fullAdmission = getCurrentAdmission(String.valueOf(programId), demographicNo);
 
 		if (fullAdmission == null) {
 			throw new AdmissionException("Admission Record not found");
@@ -221,31 +225,37 @@ public class AdmissionManagerImpl implements AdmissionManager {
 		saveAdmission(fullAdmission);
 	}
 
-	public void processDischargeToCommunity(Integer programId, Integer clientId, String providerNo, String notes) throws AdmissionException {
-		Admission currentBedAdmission = getCurrentBedProgramAdmission(clientId.toString());
+	public void processDischargeToCommunity(Integer communityProgramId, Integer demographicNo, String providerNo, String notes) throws AdmissionException {
+		Admission currentBedAdmission = getCurrentBedProgramAdmission(demographicNo);
 
 		if (currentBedAdmission != null) {
-			processDischarge(currentBedAdmission.getProgramId().intValue(), clientId, notes);
+			processDischarge(currentBedAdmission.getProgramId().intValue(), demographicNo, notes);
+			
+			BedDemographic bedDemographic = bedDemographicManager.getBedDemographicByDemographic(demographicNo);
+			
+			if (bedDemographic != null) {
+				bedDemographicManager.deleteBedDemographic(bedDemographic);
+			}
 		}
 
-		Admission currentCommunityAdmission = getCurrentCommunityProgramAdmission(clientId.toString());
+		Admission currentCommunityAdmission = getCurrentCommunityProgramAdmission(demographicNo);
 
 		if (currentCommunityAdmission != null) {
-			processDischarge(currentCommunityAdmission.getProgramId().intValue(), clientId, notes);
+			processDischarge(currentCommunityAdmission.getProgramId().intValue(), demographicNo, notes);
 		}
 
 		// Create and save admission object
-		Admission newAdmission = new Admission();
-		newAdmission.setAdmissionDate(new Date());
-		newAdmission.setAdmissionNotes(notes);
-		newAdmission.setAdmissionStatus("current");
-		newAdmission.setClientId(clientId);
-		newAdmission.setProgramId(new Long(programId));
-		newAdmission.setProviderNo(Long.valueOf(providerNo));
-		newAdmission.setTeamId(new Long(0));
-		newAdmission.setAgencyId(new Long(0));
-		newAdmission.setTemporaryAdmission(false);
+		Admission admission = new Admission();
+		admission.setAdmissionDate(new Date());
+		admission.setAdmissionNotes(notes);
+		admission.setAdmissionStatus("current");
+		admission.setClientId(demographicNo);
+		admission.setProgramId(communityProgramId.longValue());
+		admission.setProviderNo(Long.valueOf(providerNo));
+		admission.setTeamId(0L);
+		admission.setAgencyId(0L);
+		admission.setTemporaryAdmission(false);
 
-		saveAdmission(newAdmission);
+		saveAdmission(admission);
 	}
 }
